--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,6 +34,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDesN9h5qS6RCmNVeipHaNi-KgQQQLYz3Q"/>
+            android:value="YOUR-KEY"/>
     </application>
 </manifest>
