--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: giuaki_map_location
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: ">=3.1.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,17 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
+  get: ^4.6.1
+  get_storage: ^2.0.3
   google_maps_flutter: ^2.2.1
   location: ^5.0.0
   geolocator: ^10.0.1
-  provider: ^6.0.5
+  # provider: ^6.0.5
   url_launcher: ^6.1.14
   http: ^1.1.0
-  flutter_rating_bar: ^4.0.1
-
-
-
+  flutter_screenutil: ^5.9.0
+  smooth_page_indicator: ^1.1.0
+  zoom_tap_animation: ^1.1.0
+  carousel_slider: ^4.0.0
 
   cupertino_icons: ^1.0.2
 
@@ -60,7 +62,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -68,7 +69,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/tan.jpg
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
