--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   zoom_tap_animation: ^1.1.0
   carousel_slider: ^4.0.0
-
+  line_awesome_flutter: ^2.0.0
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
