--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   google_maps_flutter: ^2.2.1
   location: ^5.0.0
   geolocator: ^10.0.1
+  flutter_polyline_points: ^2.0.0
   # provider: ^6.0.5
   url_launcher: ^6.1.14
   http: ^1.1.0
@@ -43,7 +44,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   zoom_tap_animation: ^1.1.0
   carousel_slider: ^4.0.0
-
+  custom_info_window: ^1.0.1
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
