--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   custom_info_window: ^1.0.1
   line_awesome_flutter: ^2.0.0
   cupertino_icons: ^1.0.2
-
+  shared_preferences: ^2.0.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
