--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,10 @@
 	<string>This app needs access to location when open.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>This app needs access to location when in the background.</string>
+
+	<!-- MAP 4D -->
+	<key>Map4dMapAccessKey</key>
+	<string>981d328bf7c5e1789743919fcb8a73c1</string>
+
 </dict>
 </plist>
