--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   
   get: ^4.6.1
   get_storage: ^2.0.3
-  google_maps_flutter: ^2.2.1
+  # google_maps_flutter: ^2.2.1
   location: ^5.0.0
   geolocator: ^10.0.1
   flutter_polyline_points: ^2.0.0
@@ -49,12 +49,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.8
 
-  
-  # vietmap
-  vietmap_flutter_gl: ^1.2.1
-
-  # map 4D
-  map4d_map: ^2.4.0
+  # VIETMAP:
+  vietmap_flutter_gl: ^1.2.7
 
 
 
