--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+
   get: ^4.6.1
   get_storage: ^2.0.3
   # google_maps_flutter: ^2.2.1
@@ -51,8 +51,13 @@ dependencies:
 
   # VIETMAP:
   vietmap_flutter_gl: ^1.2.7
+  vietmap_flutter_navigation: ^1.4.1
 
+  # IMAGE SVG:
+  flutter_svg: ^2.0.9
 
+  #LOADDING:
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
