--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   # VIETMAP:
   vietmap_flutter_gl: ^1.2.7
   vietmap_flutter_navigation: ^1.4.1
+  vietmap_flutter_plugin: ^0.0.5
+
+  
   dartz: ^0.10.1
   dio: ^5.2.1+1
   flutter_typeahead: ^4.3.1
@@ -65,6 +68,10 @@ dependencies:
 
   #ANIMATION: 
   diamond_bottom_bar: ^1.0.0
+
+  #HTML:
+  html: ^0.15.4
+  flutter_html: 3.0.0-beta.2
 
 dev_dependencies:
   flutter_test:
